Changelog
=========


1.0.1 (unreleased)
------------------

- Use mapblock js integration to prevent duplicated googlemaps api calls.
  [mathias.leimgruber]


1.0.0 (2016-08-10)
------------------

- Nothing changed yet