@@ -4,6 +4,7 @@
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:autofeature="http://namespaces.zope.org/autofeature"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     i18n_domain="ftw.addressblock">
 
     <include package="ftw.autofeature" file="meta.zcml" />
@@ -30,6 +31,13 @@
         directory="profiles/default"
         description="Address block (add-on for ftw.simplelayout)"
         provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <upgrade-step:directory
+        profile="ftw.addressblock:default"
+        directory="./upgrades"
         />
 
 </configure>
