@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1000</version>
     <dependencies>
     </dependencies>
 </metadata>
